# Calculadora_CI_TRY

./: .gitlab-ci.yml  CMakeLists.txt  README.md  ScientificCalc.cpp  ScientificCalc.h  SimpleCalc.cpp  SimpleCalc.h  Test.cpp  calculadora.cpp  calculator  main  main.cpp
calc_main/: Calculadora.cpp  ScientificCalc.cpp  calculator
calc_testes/: Test.cpp
calc_tests/: Test.cpp
zuul.d/: jobs.yaml  projects.yaml
